Added mongoose to support database

--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
 	"dependencies" : {
 		"express": "*",
 		"jade": "*",
-		"redis-url": "*"
+		"redis-url": "*",
+		"vows": "*",
+		"mocha": "*",
+		"should": "*",
+		"mongodb": "*",
+		"mongojs": "*",
+		"mongoose": "*"
 	}
 }
