Get random document from collection

--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
 	"dependencies" : {
 		"express": "*",
 		"jade": "*",
-		"redis-url": "*",
 		"vows": "*",
 		"mocha": "*",
 		"should": "*",
 		"mongodb": "*",
-		"mongojs": "*",
-		"mongoose": "*"
+		"mongoose": "*",
+		"zombie": "*"
 	},
 	"scripts": {
 	  "test": "mocha"
